# wine_wiki_django

./: LICENSE  MANIFEST.in  db.sqlite3  hello.py  manage.py  pyproject.toml  urls.py
scripts/: ingest_wine.py
src/wine_wiki/: urls.py  views.py  wsgi.py
src/wine_wiki/migrations/: 0001_initial.py  0003_remove_wine_slug.py  0005_alter_wine_bpos_key_alter_wine_description_and_more.py
src/wine_wiki/templates/wine_wiki/: base.html  home.html  wine.html  wine_list.html
wine_wiki/: asgi.py  models.py  settings.py  todo.md  urls.py  views.py
wine_wiki/migrations/: 0002_ingest_wine_categories.py  0004_ingest_sample_wines.py
wine_wiki/static/wine_wiki/: style.css
wine_wiki/templates/wine_wiki/: home.html  wine.html  wine_list.html
