[project]
name = "wine-wiki-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django-types>=0.20.0", "django>=5.2.1", "django-stubs>=5.2.0"]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
