[project]
name = "wine-wiki-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django-types>=0.20.0", "django>=5.2.1", "django-stubs>=5.2.0"]


[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wine_wiki = [
  "templates/wine_wiki/*.html",
  "templates/wine_wiki/**/*.html",
  "static/wine_wiki/**/*",
]
